<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_menu_24"
                android:contentDescription="@string/menu_icon_description"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:paddingTop="8dp"
            android:fontFamily="@font/poppins_bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_section">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:backgroundTint="@color/blue"
            android:drawableEnd="@drawable/baseline_search_24"
            android:fontFamily="@font/poppins"
            android:drawablePadding="12dp"
            android:hint="@string/search_something"
            android:textSize="15sp"
            android:inputType="text"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/banner_image_description"
        android:src="@drawable/dashboard_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/search_bar_container" />

    <TextView
        android:id="@+id/usage_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usage_categories"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/banner_image"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:fontFamily="@font/poppins_semibold"/>

    <LinearLayout
        android:id="@+id/filter_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/usage_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAllClick"
            android:textSize="13sp"
            app:cornerRadius="10dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginEnd="8dp"
            android:text="@string/all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/daily_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            android:layout_marginEnd="8dp"
            android:onClick="onDailyClick" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/monthly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/monthly"
            android:onClick="onMonthlyClick" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yearly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:cornerRadius="10dp"
            android:text="@string/yearly"
            android:layout_marginEnd="8dp"
            android:onClick="onYearlyClick" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/daily_usage_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/daily_usage_card_description"
        android:clickable="true"
        android:backgroundTint="@color/white"
        android:focusable="true"
        android:onClick="onDailyUsageClick"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/filter_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/monthly_usage_card">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/daily_usage_image_description"
            android:src="@drawable/category_banner"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/daily_usage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/daily_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/daily_usage_card"
        app:layout_constraintStart_toStartOf="@id/daily_usage_card"
        app:layout_constraintEnd_toEndOf="@id/daily_usage_card"
        tools:ignore="SpUsage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/monthly_usage_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/monthly_usage_card_description"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        android:onClick="onMonthlyUsageClick"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@id/yearly_usage_card"
        app:layout_constraintStart_toEndOf="@id/daily_usage_card"
        app:layout_constraintTop_toBottomOf="@id/filter_buttons">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/monthly_usage_image_description"
            android:src="@drawable/category_banner"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/monthly_usage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/monthly_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/monthly_usage_card"
        app:layout_constraintStart_toStartOf="@id/monthly_usage_card"
        app:layout_constraintEnd_toEndOf="@id/monthly_usage_card"
        tools:ignore="SpUsage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/yearly_usage_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yearly_usage_card_description"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        android:onClick="onYearlyUsageClick"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/filter_buttons"
        app:layout_constraintStart_toEndOf="@id/monthly_usage_card"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/yearly_usage_image_description"
            android:src="@drawable/category_banner"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/yearly_usage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/yearly_text"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/yearly_usage_card"
        app:layout_constraintStart_toStartOf="@id/yearly_usage_card"
        app:layout_constraintEnd_toEndOf="@id/yearly_usage_card"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>