<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@drawable/welcome_pge"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/intro_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_message"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/welcome_screen_image"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/go_to_sign_in"
            android:fontFamily="@font/poppins_semibold"
            app:cornerRadius="10dp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cornerRadius="10dp"
            android:text="@string/no_account_yet_msg"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</LinearLayout>
