<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:padding="16dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu_24"
            android:contentDescription="@string/menu_icon_description"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_category"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/water_usage"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/water_usage"
                android:src="@drawable/water_usage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/water_usage"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/water_quality_reporting"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/water_quality_reporting"
                android:src="@drawable/water_report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/water_quality_reporting"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_management"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/account_management"
                android:src="@drawable/account_management" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/account_management"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/maintenance_notifications"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/maintenance_notifications"
                android:src="@drawable/maintenance_report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/maintenance_notifications"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conservation_tips"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/conservation_tips"
                android:src="@drawable/tips" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/conservation_tips"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_feedback"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/user_feedback"
                android:src="@drawable/feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_feedback"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

    </GridLayout>
</LinearLayout>

